--- a/markdown-previewer-app/src/App.css
+++ b/markdown-previewer-app/src/App.css
@@ -24,6 +24,20 @@
     border: 2px solid var(--folly) !important;
 }
 
+.button-three{
+    color: var(--folly) !important;
+}
+
+.arrow {
+    border: solid var(--folly);
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 4px;
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+    transition: margin-left 200ms ease-in-out;
+  }
+
 .start-btn:active{
     color:hsl(299, 100%, 85%) !important;
 }
@@ -38,8 +52,6 @@
 
 .background-img{
     width: 100%;
-    height: 50vh;
-    background-image: url('D:\react_projects\Markdown-previewer\markdown-previewer-app\src\assets\main.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -56,6 +68,9 @@
     .button-two:hover{
         background-color: white !important;
         color: var(--folly) !important;
+    }
+    .button-three:hover .arrow{
+        margin-left: 1.5em !important;
     }
 }
 
