--- a/markdown-previewer-app/src/App.css
+++ b/markdown-previewer-app/src/App.css
@@ -2,6 +2,20 @@
     background-color: var(--black);
     transition: top 200ms ease-in;
 }
+.swiper-slide-css{
+    width: 25em;
+    
+}
+.swiper-pagination-bullet {
+    background-color: gray;
+    width: 12px;
+    height: 12px;
+    opacity: 0.8;
+  }
+  .swiper-pagination-bullet-active {
+    background-color: var(--folly);
+    transform: scale(1.2); 
+  }
 .border-bottom-color{
     border-bottom: 2px solid var(--folly);
 }
@@ -66,6 +80,11 @@
     opacity: 1 !important;
 }
 
+.bg-cards{
+    background-color: hsla(349, 100%, 63%, 0.5);
+    color:  #f8f9fa;
+}
+
 .input-control:focus{
     box-shadow: 0 0 0 0.2rem hsla(349, 100%, 63%, 0.5) !important; 
 }
@@ -84,6 +103,13 @@
     }
     .button-three:hover .arrow{
         margin-left: 1.5em !important;
+    }
+}
+
+@media(min-width:768px){
+    .bg-cards{
+        background-color: transparent;
+        color: #212529;
     }
 }
 
