--- a/markdown-previewer-app/src/App.css
+++ b/markdown-previewer-app/src/App.css
@@ -69,10 +69,12 @@
 
 .background-img{
     width: 100%;
+    height: 60vh;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
 }
+
 
 .hr{
     border: 0;
@@ -110,6 +112,13 @@
     .bg-cards{
         background-color: transparent;
         color: #212529;
+    }
+    
+}
+
+@media (max-width:767px){
+    .background-img{
+        height: 40vh;
     }
 }
 
