--- a/markdown-previewer-app/src/App.css
+++ b/markdown-previewer-app/src/App.css
@@ -87,6 +87,10 @@
     color:  #f8f9fa;
 }
 
+.text-wrap-flex{
+    max-width: 55em;
+}
+
 .input-control:focus{
     box-shadow: 0 0 0 0.2rem hsla(349, 100%, 63%, 0.5) !important; 
 }
@@ -119,6 +123,10 @@
 @media (max-width:767px){
     .background-img{
         height: 40vh;
+    }
+    
+    .text-wrap-flex{
+        min-width: fit-content;
     }
 }
 
