--- a/markdown-previewer-app/src/App.css
+++ b/markdown-previewer-app/src/App.css
@@ -2,20 +2,36 @@
     background-color: var(--black);
     transition: top 200ms ease-in;
 }
-.swiper-slide-css{
-    width: 25em;
-    
+
+.swiper {
+    width: 100%;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
+  
+.swiper-slide {
+    background-position: center;
+    background-size: cover;
+    width: 320px;
+    margin: 1em 0;
+}
+
+.swiper-slide img {
+display: block;
+width: 100%;
+}
+
 .swiper-pagination-bullet {
     background-color: gray;
     width: 12px;
     height: 12px;
     opacity: 0.8;
   }
-  .swiper-pagination-bullet-active {
-    background-color: var(--folly);
-    transform: scale(1.2); 
-  }
+.swiper-pagination-bullet-active {
+background-color: var(--folly);
+transform: scale(1.2); 
+}
+
 .border-bottom-color{
     border-bottom: 2px solid var(--folly);
 }
@@ -127,6 +143,13 @@
     
     .text-wrap-flex{
         min-width: fit-content;
+    }
+}
+
+@media (min-width: 1200px){
+    .swiper-slide {
+        width: 400px;
+        margin: 1em 0;
     }
 }
 
