--- a/markdown-previewer-app/src/index.css
+++ b/markdown-previewer-app/src/index.css
@@ -8,5 +8,12 @@
 
 body, html{
     width: 100%;
-    overflow-x: hidden;
 }
+
+body{
+    overflow-x: hidden;
+    -ms-overflow-style: none; 
+    scrollbar-width: none;
+}
+
+
