--- a/markdown-previewer-app/src/App.css
+++ b/markdown-previewer-app/src/App.css
@@ -106,7 +106,7 @@ transform: scale(1.2);
     max-width: 55em;
 }
 
-.input-control:focus{
+.input-control:focus, .input-focus:focus-visible{
     box-shadow: 0 0 0 0.2rem hsla(349, 100%, 63%, 0.5) !important; 
 }
 
@@ -132,6 +132,16 @@ transform: scale(1.2);
 input[type="checkbox"]:hover{
     cursor: pointer;
 }
+.input-border{
+    border: none !important;
+    border-bottom: 2px solid hsla(349, 100%, 63%, 0.5) !important;
+}
+
+.input-border:focus{
+    border-color: var(--folly) !important;
+    box-shadow: none !important;
+}
+
 
 @media (min-width:992px){
     .start-btn:hover{
