--- a/markdown-previewer-app/src/App.css
+++ b/markdown-previewer-app/src/App.css
@@ -92,9 +92,10 @@ transform: scale(1.2);
 
 
 .hr{
-    border-top:2px solid var(--folly) !important;
-    border-bottom: 2px solid var(--folly) !important;
-    opacity: 1 !important;
+    /*border-top:2px solid var(--folly) !important;
+    border-bottom: 2px solid var(--folly) !important;*/
+    background: rgb(238,174,202);
+    background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
 }
 
 .bg-cards{
