--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,10 +1,34 @@
+
+
+.markdown-row{
+    height: 75%;
+}
+
+.text-area{
+    border-radius: 10px 0% 0% 10px;
+}
+
+.markdown-prev{
+    border-radius: 0 10px 10px 0;
+}
+
 @media (max-width: 991px){
     .markdown-row{
-        height: 100% !important;
+        height: 95%;
+        margin: 0 0.5em 0 0.5em;
     }
 }
 @media (max-width:767px) {
     .markdown-row{
-        height:auto !important;
+        height: 100%;
+        margin: 0;
     }
+    .text-area, .markdown-prev{
+        height: 50% !important;
+        border-radius: 0;
+    }
+    .container-fluid{
+        padding: 0;
+    }
+
 }
