--- a/app/src/index.css
+++ b/app/src/index.css
@@ -8,6 +8,8 @@
 
 body, html{
   width: 100%;
+  background: rgb(234, 144, 183);
+  background: linear-gradient(45deg, rgba(234, 144, 183,1) 39%, rgba(230,185,127,1) 76%, rgba(238,212,158,1) 100%);
 }
 
 body{
