--- a/app/src/App.css
+++ b/app/src/App.css
@@ -43,6 +43,7 @@ textarea:focus {
     border-radius: 1rem;
     background: rgb(129, 0, 153);
     background: linear-gradient(180deg, rgba(129, 0, 153, 1) 0%, rgba(255, 155, 242, 1) 100%, rgba(255, 0, 247, 1) 100%, rgba(238, 212, 158, 1) 100%);
+    cursor: pointer;
 }
 
 @media (max-width: 991px) {
