--- a/app/src/App.css
+++ b/app/src/App.css
@@ -10,8 +10,10 @@
 
 textarea {
     resize: none;
-    overflow: auto;
-    transition: --background 500ms ease-in-out;
+    overflow: auto; 
+    transition-property: box-shadow, background-color, --background !important;
+    transition-duration: 175ms !important;
+    transition-timing-function: ease-in-out !important;
 }
 
 textarea:focus {
@@ -21,11 +23,10 @@ textarea:focus {
 .form-control {
     font-family: Arial, Helvetica, sans-serif;
     background-color: transparent;
-    transition-duration: 250ms;
 }
 
 .form-control:focus {
-    background-color: transparent;
+    background-color: hsla(0, 0%, 0%, 0.1);
     -webkit-box-shadow: 0px 0px 0px 1px rgba(255, 255, 255, 1);
     -moz-box-shadow: 0px 0px 0px 1px rgba(255, 255, 255, 1);
     box-shadow: 0px 0px 0px 1px rgba(255, 255, 255, 1);
@@ -46,10 +47,21 @@ textarea:focus {
     cursor: pointer;
 }
 
+.navbar-toggler{
+    border: none;
+}
+
+@media (min-width: 992px){
+    .navbar{
+        top: 0;
+        left: 0;
+        position: absolute;
+    }
+}
+
 @media (max-width: 991px) {
-    .markdown-row {
-        height: 95%;
-        margin: 0 0.5em 0 0.5em;
+    .navbar{
+        height: clamp(3em, 10%, 4em);
     }
 }
 
@@ -57,16 +69,14 @@ textarea:focus {
     textarea:hover{
         --background: hsla(0, 0%, 0%, 0.1);
     }
+    .markdown-prev{
+        box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.263);
+    }
 }
 
 @media (max-width: 767px) {
     .form-control {
-        transition-duration: 0ms;
-    }
-
-    .markdown-row {
-        height: 100%;
-        margin: 0;
+        transition-duration: 0ms !important;
     }
 
     .text-area,
