--- a/app/src/index.css
+++ b/app/src/index.css
@@ -8,12 +8,16 @@
 
 body, html{
   width: 100%;
-  background: rgb(234, 144, 183);
-  background: linear-gradient(45deg, rgba(234, 144, 183,1) 39%, rgba(230,185,127,1) 76%, rgba(238,212,158,1) 100%);
+  height: 100vh;
 }
 
 body{
   overflow-x: hidden;
   -ms-overflow-style: none; 
   scrollbar-width: none;
+  background: rgb(234, 144, 183);
+  background: linear-gradient(45deg, rgba(234, 144, 183,1) 39%, rgba(230,185,127,1) 76%, rgba(238,212,158,1) 100%);
+}
+#root{
+  height: 100%;
 }
