font sizie responsive

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -120,6 +120,9 @@ textarea:focus {
     .text-area {
         padding: 0.5em 0.5em 0.25em 0.5em !important;
     }
+    textarea{
+        font-size: clamp(0.5rem, 3vw + 0.1rem, 1rem) !important;
+    }
 
     .container-fluid {
         padding: 0;
