--- a/markdown-previewer-app/src/AboutUs/aboutUs-custom.css
+++ b/markdown-previewer-app/src/AboutUs/aboutUs-custom.css
@@ -1,15 +1,8 @@
-.about-card {
-    -webkit-box-shadow: 28px 28px 21px -22px rgba(72, 72, 72, 1);
-    -moz-box-shadow: 28px 28px 21px -22px rgba(72, 72, 72, 1);
-    box-shadow: 28px 28px 21px -22px rgba(72, 72, 72, 1);
-    z-index: -2;
+.about-container{
+    background-color: #CCB0DD;
+    border-radius: 10px ;
 }
-.custom-background{
-    background-image: url(../assets/rrrepeat.svg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-}
+
 
 .card-divider {
     border-left: 2px solid rgb(132, 132, 132);
@@ -17,33 +10,43 @@
 
 .about-title{
     font-size: 5rem !important;
-    font-family: Impact, sans-serif !important;
-    color: black !important;
+    font-weight: bold !important;
+    color: #5C49A8 !important;
 }
 
+.purple-container{
+    
+    background-color: #EBE4F4;
+    border-radius: 0 0 10px 10px;
+}
 
-@media (max-width: 767px) {
-    .about-card {
-        -webkit-box-shadow: 0px 11px 24px 0px rgba(66, 68, 90, 1);
-        -moz-box-shadow: 0px 11px 24px 0px rgba(66, 68, 90, 1);
-        box-shadow: 0px 11px 24px 0px rgba(66, 68, 90, 1);
-    }
+.ball{
+    width: 1em !important;
+    height: 1em;
+    background-color: #5C49A8;
+}
+
+.message{
+    color: #957FA0 !important;
+    font-family: Verdana, Tahoma !important ;
+}
+
+.boy, .girl{
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-size: cover;
+}
+.boy{
+    background-image: url(../assets/boy.svg);
+}
+.girl{
+    background-image: url(../assets/girl.svg);
 }
 
 @media (max-width:575px){
     .about-title{
         text-align: center;
         font-size: 3rem !important;
-    }
-    .about-flex{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-    .about-card{
-        -webkit-box-shadow: 0px 0px 38px -1px rgba(66, 68, 90, 1);
-        -moz-box-shadow: 0px 0px 38px -1px rgba(66, 68, 90, 1);
-        box-shadow: 0px 0px 38px -1px rgba(66, 68, 90, 1);
     }
 }
 
