--- a/markdown-previewer-app/src/AboutUs/aboutUs-custom.css
+++ b/markdown-previewer-app/src/AboutUs/aboutUs-custom.css
@@ -3,7 +3,57 @@
     background-image: 
         radial-gradient(circle at top left, rgba(92, 73, 168, 0.8), transparent 60%),
         linear-gradient(to bottom, #F6E7FF, #FFB4D9, #FFC27A);
-    z-index: -111;
+    z-index: -150;
+}
+
+.star{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -125;
+    animation: star-animation 8s ease-in-out infinite, background-scale 16s linear infinite;
+}
+
+.star.star-1{
+    background: url(../assets/stars/star1.png);
+    animation-delay: 0s;
+}
+
+.star.star-2{
+    background: url(../assets/stars/star2.png);
+    animation-delay: -1s;
+}
+
+.star.star-3{
+    background: url(../assets/stars/star3.png);
+    animation-delay: -2s;
+}
+
+.star.star-4{
+    background: url(../assets/stars/star4.png);
+    animation-delay: -3s;
+}
+
+.star.star-5{
+    background: url(../assets/stars/star5.png);
+    animation-delay: -4s;
+}
+
+.star.star-6{
+    background: url(../assets/stars/star6.png);
+    animation-delay: -5s;
+}
+
+.star.star-7{
+    background: url(../assets/stars/star7.png);
+    animation-delay: -6s;
+}
+
+.star.star-8{
+    background: url(../assets/stars/star8.png);
+    animation-delay: -7s;
 }
 
 .container-background{
@@ -26,6 +76,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: -50;
+    filter: drop-shadow(0px 0px 5px rgb(136, 89, 215)) ;
 }
 
 .about-container{
@@ -72,6 +123,32 @@
         background-size: cover;
 
     }
+}
+
+@media (max-width:767px){
+    .star{
+        animation: none;
+    }
+}
+
+@keyframes star-animation {
+    0%,20%,40%,60%,80%,100%{
+        opacity: 0;
+    }
+    10%,30%,50%,70%,90%{
+        opacity: 1;
+    }
+    
+}
+
+@keyframes background-scale {
+    0%{
+        transform: scale(0.7);
+    }
+    100%{
+        transform: scale(1);
+    }
+    
 }
 
 
