--- a/markdown-previewer-app/src/App.css
+++ b/markdown-previewer-app/src/App.css
@@ -1,4 +1,4 @@
-.navbar-color{
+.navbar-color {
     background-color: var(--black);
     transition: top 200ms ease-in;
 }
@@ -8,7 +8,7 @@
     padding-top: 50px;
     padding-bottom: 50px;
 }
-  
+
 .swiper-slide {
     background-position: center;
     background-size: cover;
@@ -17,8 +17,8 @@
 }
 
 .swiper-slide img {
-display: block;
-width: 100%;
+    display: block;
+    width: 100%;
 }
 
 .swiper-pagination-bullet {
@@ -27,35 +27,38 @@ width: 100%;
     height: 12px;
     opacity: 0.8;
 }
+
 .swiper-pagination-bullet-active {
-background-color: var(--folly);
-transform: scale(1.2); 
+    background-color: var(--folly);
+    transform: scale(1.2);
 }
 
-.border-bottom-color{
+.border-bottom-color {
     border-bottom: 2px solid var(--folly);
 }
+
 .offcanvas-header .btn-close {
     filter: invert(1) grayscale(100%) brightness(200%);
     border: none;
 }
-.start-btn{
-    color:#FC81FF !important;
+
+.start-btn {
+    color: #FC81FF !important;
     font-weight: bold !important;
 }
 
-.button-one{
+.button-one {
     background-color: transparent !important;
     color: var(--folly) !important;
     border: 2px solid var(--folly) !important;
 }
 
-.button-two{
+.button-two {
     background-color: var(--folly) !important;
     border: 2px solid var(--folly) !important;
 }
 
-.button-three{
+.button-three {
     color: var(--folly) !important;
 }
 
@@ -67,129 +70,134 @@ transform: scale(1.2);
     transform: rotate(-45deg);
     -webkit-transform: rotate(-45deg);
     transition: margin-left 200ms ease-in-out;
-  }
-
-.start-btn:active{
-    color:hsl(299, 100%, 85%) !important;
 }
-.button-one:active{
+
+.start-btn:active {
+    color: hsl(299, 100%, 85%) !important;
+}
+
+.button-one:active {
     background-color: var(--folly) !important;
     color: white !important;
     transition: none !important;
 }
-.button-two:active{
+
+.button-two:active {
     background-color: transparent !important;
     color: var(--folly) !important;
     transition: none !important;
 }
 
-.background-img{
-    height: 60vh;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+.background-img {
+    height: 60vh !important;
+    object-fit: cover;
 }
 
 
-.hr{
+.hr {
     /*border-top:2px solid var(--folly) !important;
     border-bottom: 2px solid var(--folly) !important;*/
-    background: rgb(238,174,202);
-    background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+    background: rgb(238, 174, 202);
+    background: radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(148, 187, 233, 1) 100%);
 }
 
-.bg-cards{
+.bg-cards {
     background-color: hsla(349, 100%, 63%, 0.5);
-    color:  #f8f9fa;
+    color: #f8f9fa;
 }
 
-.text-wrap-flex{
+.text-wrap-flex {
     max-width: 55em;
 }
 
-.input-control:focus, .input-focus:focus-visible{
-    box-shadow: 0 0 0 0.2rem hsla(349, 100%, 63%, 0.5) !important; 
+.input-control:focus,
+.input-focus:focus-visible {
+    box-shadow: 0 0 0 0.2rem hsla(349, 100%, 63%, 0.5) !important;
 }
 
-.nav-link:focus{
+.nav-link:focus {
     box-shadow: none !important;
 }
 
 .custom-checkbox input[type="checkbox"]:checked {
-    background-color: var(--folly) ;
-    box-shadow: 0 0 0 0.2rem hsla(349, 100%, 63%, 0.5) ; 
+    background-color: var(--folly);
+    box-shadow: 0 0 0 0.2rem hsla(349, 100%, 63%, 0.5);
     border-color: var(--folly);
-  }
+}
 
 .custom-checkbox input[type="checkbox"]:focus {
-    box-shadow: 0 0 0 0.2rem hsla(349, 100%, 63%, 0.5); 
+    box-shadow: 0 0 0 0.2rem hsla(349, 100%, 63%, 0.5);
     border-color: rgb(255, 108, 135);
-  }
+}
 
-.modal-content, .custom-checkbox input[type="checkbox"]{
+.modal-content,
+.custom-checkbox input[type="checkbox"] {
     border-color: var(--folly) !important;
 }
 
-input[type="checkbox"]:hover{
+input[type="checkbox"]:hover {
     cursor: pointer;
 }
-.input-border{
+
+.input-border {
     border: none !important;
     border-bottom: 2px solid hsla(349, 100%, 63%, 0.5) !important;
 }
 
-.input-border:focus{
+.input-border:focus {
     border-color: var(--folly) !important;
     box-shadow: none !important;
 }
 
 
-@media (min-width:992px){
-    .start-btn:hover{
-        color:hsl(299, 100%, 85%) !important;
+@media (min-width:992px) {
+    .start-btn:hover {
+        color: hsl(299, 100%, 85%) !important;
     }
-    .button-one:hover{
+
+    .button-one:hover {
         background-color: var(--folly) !important;
         color: white !important;
     }
-    .button-two:hover{
+
+    .button-two:hover {
         background-color: transparent !important;
         color: var(--folly) !important;
     }
-    .button-three:hover .arrow{
+
+    .button-three:hover .arrow {
         margin-left: 1.5em !important;
     }
 }
 
-@media (max-width:991px){
-    .button-three:active .arrow{
+@media (max-width:991px) {
+    .button-three:active .arrow {
         transition-duration: 0ms;
         margin-left: 1.5em !important;
     }
 }
 
-@media(min-width:768px){
-    .bg-cards{
+@media(min-width:768px) {
+    .bg-cards {
         background-color: transparent;
         color: #212529;
     }
-    
+
 }
 
-@media (max-width:767px){
-    .background-img{
-        height: 40vh;
+@media (max-width:767px) {
+    .background-img {
+        height: 40vh !important;
     }
-    
-    .text-wrap-flex{
+
+    .text-wrap-flex {
         min-width: fit-content;
     }
 }
 
-@media (min-width: 1200px){
+@media (min-width: 1200px) {
     .swiper-slide {
         width: 400px;
         margin: 1em 0;
     }
 }
-
