--- a/markdown-previewer-app/src/App.css
+++ b/markdown-previewer-app/src/App.css
@@ -12,7 +12,7 @@
 .swiper-slide {
     background-position: center;
     background-size: cover;
-    width: 320px;
+    width: 320px !important;
     margin: 1em 0;
 }
 
@@ -89,8 +89,8 @@
 }
 
 .background-img {
-    height: 60vh !important;
-    object-fit: cover;
+    height: 80vh !important;
+
 }
 
 
@@ -149,6 +149,24 @@ input[type="checkbox"]:hover {
     box-shadow: none !important;
 }
 
+.carousel-item::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 10em;
+    background: rgba(0, 0, 0, 0.5);
+    /* Adjust opacity as needed */
+    z-index: 1;
+}
+
+.carousel-caption {
+    position: relative;
+    z-index: 2;
+    color: white;
+    /* Safe color choice */
+}
 
 @media (min-width:992px) {
     .start-btn:hover {
@@ -183,6 +201,8 @@ input[type="checkbox"]:hover {
         color: #212529;
     }
 
+
+
 }
 
 @media (max-width:767px) {
@@ -193,11 +213,20 @@ input[type="checkbox"]:hover {
     .text-wrap-flex {
         min-width: fit-content;
     }
+
+    .carousel-item::before {
+        height: 100%;
+    }
 }
 
 @media (min-width: 1200px) {
     .swiper-slide {
-        width: 400px;
-        margin: 1em 0;
+        width: 400px !important;
+    }
+}
+
+@media (min-width: 1400px) {
+    .swiper-slide {
+        width: 450px !important;
     }
 }
