--- a/markdown-previewer-app/src/App.css
+++ b/markdown-previewer-app/src/App.css
@@ -5,8 +5,7 @@
 
 .swiper {
     width: 100%;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding: 50px 0;
 }
 
 .swiper-slide {
@@ -68,7 +67,6 @@
     display: inline-block;
     padding: 4px;
     transform: rotate(-45deg);
-    -webkit-transform: rotate(-45deg);
     transition: margin-left 200ms ease-in-out;
 }
 
@@ -79,30 +77,23 @@
 .button-one:active {
     background-color: var(--folly) !important;
     color: white !important;
-    transition: none !important;
 }
 
 .button-two:active {
     background-color: transparent !important;
     color: var(--folly) !important;
-    transition: none !important;
 }
 
 .background-img {
     height: 80vh !important;
-
 }
 
-
 .hr {
-    /*border-top:2px solid var(--folly) !important;
-    border-bottom: 2px solid var(--folly) !important;*/
-    background: rgb(238, 174, 202);
     background: radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(148, 187, 233, 1) 100%);
 }
 
 .bg-cards {
-    background-color: hsla(349, 100%, 63%, 0.5);
+    background-color: hsla(349, 100%, 63%, 0.5) !important;
     color: #f8f9fa;
 }
 
@@ -120,14 +111,14 @@
 }
 
 .custom-checkbox input[type="checkbox"]:checked {
-    background-color: var(--folly);
-    box-shadow: 0 0 0 0.2rem hsla(349, 100%, 63%, 0.5);
-    border-color: var(--folly);
+    background-color: var(--folly) !important;
+    box-shadow: 0 0 0 0.2rem hsla(349, 100%, 63%, 0.5) !important;
+    border-color: var(--folly) !important;
 }
 
 .custom-checkbox input[type="checkbox"]:focus {
-    box-shadow: 0 0 0 0.2rem hsla(349, 100%, 63%, 0.5);
-    border-color: rgb(255, 108, 135);
+    box-shadow: 0 0 0 0.2rem hsla(349, 100%, 63%, 0.5) !important;
+    border-color: rgb(255, 108, 135) !important;
 }
 
 .modal-content,
@@ -157,7 +148,6 @@ input[type="checkbox"]:hover {
     width: 100%;
     height: 10em;
     background: rgba(0, 0, 0, 0.5);
-    /* Adjust opacity as needed */
     z-index: 1;
 }
 
@@ -165,10 +155,9 @@ input[type="checkbox"]:hover {
     position: relative;
     z-index: 2;
     color: white;
-    /* Safe color choice */
 }
 
-@media (min-width:992px) {
+@media (min-width: 992px) {
     .start-btn:hover {
         color: hsl(299, 100%, 85%) !important;
     }
@@ -188,24 +177,21 @@ input[type="checkbox"]:hover {
     }
 }
 
-@media (max-width:991px) {
+@media (max-width: 991px) {
     .button-three:active .arrow {
         transition-duration: 0ms;
         margin-left: 1.5em !important;
     }
 }
 
-@media(min-width:768px) {
+@media (min-width: 768px) {
     .bg-cards {
-        background-color: transparent;
-        color: #212529;
+        background-color: transparent !important;
+        color: #212529 !important;
     }
-
-
-
 }
 
-@media (max-width:767px) {
+@media (max-width: 767px) {
     .background-img {
         height: 40vh !important;
     }
